--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.pawel_piedel.mymovies">
 
     <application
+        android:name=".MyMoviesApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
