MVP for tabs popular,top rated and upcoming created.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pawel_piedel.mymovies">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".MyMoviesApplication"
         android:allowBackup="true"
@@ -11,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.movies.MoviesActivity"
+            android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
