--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,26 @@
         <activity
             android:name="com.example.pawel_piedel.mymovies.movie_details.MovieDetailsActivity"
             android:parentActivityName="com.example.pawel_piedel.mymovies.movies.MoviesActivity">
+
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pawel_piedel.mymovies.movies.MoviesActivity" />
+        </activity>
+
+        <activity
+            android:name="com.example.pawel_piedel.mymovies.search.SearchActivity"
+            android:label="@string/title_activity_search"
+            android:launchMode="singleTop"
+            android:parentActivityName="com.example.pawel_piedel.mymovies.movies.MoviesActivity"
+            android:theme="@style/AppTheme">
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
     </application>
 
