On click on search result is moving user to the detailed activity now.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,11 @@
             android:label="@string/title_activity_search"
             android:parentActivityName="com.example.pawel_piedel.mymovies.movies.MoviesActivity"
             android:theme="@style/AppTheme">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.pawel_piedel.mymovies.movies.MoviesActivity" />
         </activity>
     </application>
 
